# kueri

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRODUCT.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/ISSUE_TEMPLATE/: inline-edit-feature.md
.github/workflows/: ci.yml  release.yml
scripts/: capture-screenshots.mjs
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clients.rs  commands.rs  error.rs  lib.rs  main.rs  menu.rs  persist.rs  pgtools.rs
src-tauri/src/db/: connect.rs  ddl.rs  driver.rs  mod.rs  mysql.rs  nosql.rs  pool.rs  postgres.rs  sqlite.rs  sqlserver.rs  tunnel.rs
src/components/: CommandPalette.svelte  ConnectionForm.svelte  ContextMenu.svelte  DataGrid.svelte  DbPicker.svelte  ExplainNode.svelte  ExplainPlan.svelte  ExportDialog.svelte  FilterBar.svelte  ImportDialog.svelte  LogPanel.svelte  Modal.svelte  QueryEditor.svelte  QueryTabs.svelte  RowDetail.svelte  SavedQueries.svelte  ServerMonitor.svelte  Settings.svelte  Sidebar.svelte  StructureView.svelte  Toolbar.svelte  Welcome.svelte  WorkspaceRail.svelte
src/lib/: datetime.ts  dbKinds.ts  ddl.ts  sqlexport.ts  tauri.ts  types.ts
src/lib/editor/: theme.ts
src/lib/stores/: connection.ts  contextMenu.ts  log.ts  saved.ts  settings.ts
